Finish taco meat recipe

--- a/recipes/taco-meat.html
+++ b/recipes/taco-meat.html
@@ -7,6 +7,29 @@
 
 <body>
     <h1>Taco meat</h1>
-</body>
+    <img src="../img/taco-meat.jpeg" alt="taco meat">
 
+    <h3>Description</h3>
+    <p>Delicious fried ground beef you can use for taco, burrito or spaghetti!</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>500g of raw ground beef</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+        <li>Oil (preferably lard, tallow or olive oil)</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Heat up the pan</li>
+        <li>Add oil of your choice and let it get hot</li>
+        <li>Place meat on the pan</li>
+        <li>After around 1 minute, break up the meat into 4 parts</li>
+        <li>Continue frying and breaking up the meat gradually</li>
+        <li>Once meat is broken up into relatively small pieces, add salt and pepper</li>
+        <li>Continue fryying until brown</li>
+    </ol>
+
+</body>
 </html>
