--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <title>Odin recipes</title>
 </head>
 
 <body>
     <h1>Odin recipes</h1>
+    <a href="./recipes/taco-meat.html">Taco meat</a>
 </body>
+
+</html>
