--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
 <body>
     <h1>Odin recipes</h1>
-    <a href="./recipes/taco-meat.html">Taco meat</a>
+    <ul>
+        <li><a href="./recipes/taco-meat.html">Taco meat</a></li>
+        <li><a href="./recipes/cottage-pie.html">Cottage pie</a></li>
+    </ul>
 </body>
 
 </html>
