--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Odin recipes</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Odin recipes</title>
+    </head>
 
-<body>
-    <h1>Odin recipes</h1>
-    <ul>
-        <li><a href="./recipes/taco-meat.html">Taco meat</a></li>
-        <li><a href="./recipes/cottage-pie.html">Cottage pie</a></li>
-    </ul>
-</body>
+    <body>
+        <h1>Odin recipes</h1>
+        <ul>
+            <li><a href="./recipes/taco-meat.html">Taco meat</a></li>
+            <li><a href="./recipes/cottage-pie.html">Cottage pie</a></li>
+            <li><a href="./recipes/scrambled-eggs.html">Scrambled eggs</a></li>
+        </ul>
+    </body>
 
 </html>
