--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin recipes</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
 
     <body>
-        <h1>Odin recipes</h1>
+        <h1 id="main">Odin recipes</h1>
         <ul>
             <li><a href="./recipes/taco-meat.html">Taco meat</a></li>
             <li><a href="./recipes/cottage-pie.html">Cottage pie</a></li>
