--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1 id="main">Odin recipes</h1>
-        <ul>
+        <ul class="recipe-list">
             <li><a href="./recipes/taco-meat.html">Taco meat</a></li>
             <li><a href="./recipes/cottage-pie.html">Cottage pie</a></li>
             <li><a href="./recipes/scrambled-eggs.html">Scrambled eggs</a></li>
